dsf4openshift/initial-setup/customizeOpenshift/stylesheet/icons.css
/*******************************************************************************
 * Copyright 2015-2018 Capgemini SE.
 * 
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 * 
 *      http://www.apache.org/licenses/LICENSE-2.0
 * 
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 ******************************************************************************/

#header-logo {
  background-image: url("https://raw.githubusercontent.com/devonfw/devonfw-shop-floor/master/dsf4openshift/initial-setup/customizeOpenshift/images/devonfw-openshift.png");
  width: 230px;
  height: 40px;
}

.devonfw-logo-language {
  background-image: url("https://raw.githubusercontent.com/devonfw/devonfw-shop-floor/master/dsf4openshift/initial-setup/customizeOpenshift/images/devonfw-languagesIcon.png");
  width: 110px;
  height: 36px;
}

.devonfw-logo {
  background-image: url("https://raw.githubusercontent.com/devonfw/devonfw-shop-floor/master/dsf4openshift/initial-setup/customizeOpenshift/images/devonfw.png");
  width: 50px;
  height: 50px;
}

.devonfw-angular-logo {
  background-image: url("https://raw.githubusercontent.com/devonfw/devonfw-shop-floor/master/dsf4openshift/initial-setup/customizeOpenshift/images/devonfw-angular.png");
  content: url("https://raw.githubusercontent.com/devonfw/devonfw-shop-floor/master/dsf4openshift/initial-setup/customizeOpenshift/images/devonfw-angular.png");
  width: 50px;
  height: 50px;
}

.devonfw-java-logo {
  background-image: url("https://raw.githubusercontent.com/devonfw/devonfw-shop-floor/master/dsf4openshift/initial-setup/customizeOpenshift/images/devonfw-java.png");
  content: url("https://raw.githubusercontent.com/devonfw/devonfw-shop-floor/master/dsf4openshift/initial-setup/customizeOpenshift/images/devonfw-java.png");
  width: 50px;
  height: 50px;
}

.catalog-projects-summary-panel .services-view .services-item .services-item-icon:after {
  height: 80px;
  width: 80px;
  margin: -40px 0 0 -40px;
  z-index: -1;
}

/*
.services-view .services-item:focus .services-item-icon:after, .services-view .services-item:hover .services-item-icon:after {
  background: transparent;
  border-color: #0088ce
}
*/

